--- a/src/sass/_tabs.scss
+++ b/src/sass/_tabs.scss
@@ -82,7 +82,7 @@ $tab-header-height-mobile:  50px;
     padding: $padding-large-vertical 0 0 0 !important;
     width: 100%;
     height: $tab-header-height;
-    @media screen and (max-width: $screen-phone) {
+    @media screen and (max-width: $screen-xxs-max) {
       padding: $padding-base-vertical 0 0 0 !important;
       height: $tab-header-height-mobile;
     }
@@ -117,7 +117,7 @@ $tab-header-height-mobile:  50px;
     margin-top: $tab-header-height;
     margin-bottom: $margin-base-horizontal;
 
-    @media screen and (max-width: $screen-phone) {
+    @media screen and (max-width: $screen-xxs-max) {
       margin-top: $tab-header-height-mobile;
     }
   }
@@ -127,7 +127,7 @@ $tab-header-height-mobile:  50px;
 }
 
 .tab {
-  @media all and (max-width: $screen-phone) {
+  @media all and (max-width: $screen-xxs-max) {
     header {
       margin: 0;
     }
