--- a/src/sass/modules/_downloads.scss
+++ b/src/sass/modules/_downloads.scss
@@ -28,7 +28,7 @@
 
 .download {
   margin: 0 auto 20px auto;
-  @media screen and (max-width: $screen-phone) {
+  @media screen and (max-width: $screen-xxs-max) {
     margin: 0 auto;
   }
 
